<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:text="@string/cardholder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/order_table_text_size"
        android:textStyle="bold"
        android:id="@+id/CardsNameColumn"
        android:layout_weight="2"/>
    <TextView android:text="@string/card_first_six_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/table_primary_text_size"
        android:id="@+id/CardsFirst6Column"
        android:layout_weight="2"
        android:layout_below="@+id/CardsNameColumn"
        android:layout_alignParentStart="true"/>
    <TextView android:text="@string/card_exp_date_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/order_table_text_size"
        android:id="@+id/CardsExpColumn"
        android:layout_weight="2"
        android:layout_marginLeft="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="105dp"
        android:layout_toEndOf="@+id/CardsLast4Column"
        android:layout_alignBaseline="@+id/CardsFirst6Column"
        android:layout_toRightOf="@+id/CardsLast4Column"/>
    <TextView android:text="@string/card_number_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/table_tertiary_text_size"
        android:id="@+id/CardsTokenColumn"
        android:layout_weight="2"
        android:textColor="@color/secondary_table_text_color"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_last_four_placeholder"
        android:id="@+id/CardsLast4Column"
        android:layout_alignBottom="@+id/CardsFirst6Column"
        android:textSize="@dimen/table_primary_text_size"
        android:layout_toEndOf="@+id/CardsXXXXColumn"
        android:layout_toRightOf="@+id/CardsXXXXColumn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_middle_placeholder"
        android:id="@+id/CardsXXXXColumn"
        android:layout_toEndOf="@+id/CardsFirst6Column"
        android:textSize="@dimen/table_secondary_text_size"
        android:layout_alignBaseline="@+id/CardsFirst6Column"
        android:textColor="@color/secondary_table_text_color"
        android:layout_toRightOf="@+id/CardsFirst6Column"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:id="@+id/textView4"
        android:layout_below="@+id/CardsFirst6Column"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/table_secondary_text_size"
        android:textColor="@color/secondary_table_text_color"/>
</RelativeLayout>