
    <!--
      ~ Copyright (C) 2016 Clover Network, Inc.
      ~
      ~ Licensed under the Apache License, Version 2.0 (the "License");
      ~ you may not use this file except in compliance with the License.
      ~
      ~ You may obtain a copy of the License at
      ~    http://www.apache.org/licenses/LICENSE-2.0
      ~
      ~ Unless required by applicable law or agreed to in writing, software
      ~ distributed under the License is distributed on an "AS IS" BASIS,
      ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      ~ See the License for the specific language governing permissions and
      ~ limitations under the License.
      -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rootLayout"
    android:orientation="vertical"
    tools:context="com.clover.remote.client.lib.example.ExamplePOSActivity"
    android:columnCount="1"
    android:rowCount="4">
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginRight="15dp"
      android:layout_marginBottom="15sp"
      android:id="@+id/TopPanel">
    <TextView
        android:id="@+id/ConnectionStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_weight="2"
        />
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_border_padding"
        android:onClick="showRegister"
        android:layout_marginRight="5sp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/OrdersButton"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OrdersButton"
        android:text="@string/orders"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:layout_alignParentTop="true"
        android:onClick="showOrders"
        android:layout_toStartOf="@+id/RefundButton"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RefundButton"
        android:text="@string/refund"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:onClick="showRefunds"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/CardsButton"
        android:visibility="visible"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CardsButton"
        android:text="@string/cards"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:onClick="showCards"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/PreAuthButton"
        android:visibility="visible"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PreAuthButton"
        android:text="@string/preauth"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:onClick="showPreAuths"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/PendingButton"
        android:visibility="visible"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PendingButton"
        android:text="@string/pending"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:onClick="showPending"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/MiscButton"
        android:visibility="visible"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MiscButton"
        android:text="@string/misc"
        android:textSize="18sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/button_border_padding"
        android:onClick="showMisc"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />
  </LinearLayout>


  <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
      android:id="@+id/contentContainer" android:layout_below="@+id/TopPanel"
      android:layout_above="@+id/Divider">

  </FrameLayout>

  <View android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@android:color/holo_blue_light"
      android:layout_above="@+id/BottomPanel"
      android:id="@+id/Divider"></View>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/BottomPanel"
      android:layout_alignParentBottom="true"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/device_status"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_status"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/DeviceOptionsPanel">
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/DeviceStatus"
        android:text="@string/unknown"
        android:textSize="@dimen/text_size_status"/>
  </LinearLayout>

</RelativeLayout>