<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/order_table_text_size"
      android:id="@+id/PaymentsRowStatusColumn"
      android:layout_weight="2"
      android:text="@string/authorized"/>
  <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/table_tertiary_text_size"
      android:id="@+id/PaymentsRowTipColumn"
      android:layout_weight="2"
      android:text="@string/payment_example_smaller"
      android:textColor="@color/secondary_table_text_color"
      android:layout_alignRight="@+id/PaymentsRowTotalColumn"
      android:layout_below="@+id/PaymentsRowTotalColumn"/>
  <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/order_table_text_size"
      android:id="@+id/PaymentsRowTotalColumn"
      android:layout_weight="2"
      android:text="@string/payment_example"
      android:layout_alignParentRight="true"
      android:textStyle="bold"/>
  <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tip"
      android:id="@+id/PaymentsRowTipColumnLabel"
      android:layout_alignBaseline="@+id/PaymentsRowTipColumn"
      android:textSize="@dimen/table_tertiary_text_size"
      android:textColor="@color/secondary_table_text_color"
      android:layout_toStartOf="@+id/PaymentsRowTotalColumn"
      android:layout_toLeftOf="@+id/PaymentsRowTotalColumn"/>
  <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/table_tertiary_text_size"
      android:id="@+id/PaymentRowExternalPaymentId"
      android:layout_weight="2"
      android:text="@string/external_id_placeholder"
      android:textColor="@color/secondary_table_text_color"
      android:layout_below="@+id/PaymentsRowStatusColumn"
      android:layout_alignParentLeft="true"/>
</RelativeLayout>